fix for tests after upgrading of api-all dependency